@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-05T16:25:09Z",
+  "timestamp" : "2022-09-06T16:26:50Z",
   "count_outdated" : 307,
   "uniques_outdated" : 189,
-  "count" : 340,
-  "uniques" : 206,
+  "count" : 341,
+  "uniques" : 207,
   "clones" : [
     {
       "timestamp": "2022-08-26T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
+    },
+    {
+      "timestamp": "2022-09-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
