@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 13,
   "clones": [
     {
@@ -26,6 +26,11 @@
       "timestamp": "2022-09-03T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-09-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
