@@ -1,3 +1,11 @@
+2022-09-06T16:26:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3001803128
+* notice: last 14d: unq all: 13 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 189 307 / 206 340
+* notice: next accum: outdated-unq outdated-all / unq all: 189 307 / 207 341
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-06]
+
 2022-09-05T16:25:09Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2994778942
 * notice: last 14d: unq all: 13 33
